--- a/src/partials/ciber/tab_2.html
+++ b/src/partials/ciber/tab_2.html
@@ -97,9 +97,10 @@
                   encuentras en nuestro sitio web oficial.
                 </li>
                 <li>
-                  Si vas a descargar WhatsApp en tu dispositivo móvil, hazlo
-                  desde las tiendas de aplicaciones oficiales (Play Store y App
-                  Store).
+                  Verifica que el número de contacto coincida con el que aparece en nuestro sitio web
+oficial (+57) 315 511 4150 o dando clic al botón de WhatsApp que encuentras en la
+parte inferior derecha la página web.
+
                 </li>
               </ul>
             </div>
