--- a/src/partials/faqs/faq_3.html
+++ b/src/partials/faqs/faq_3.html
@@ -1,7 +1,12 @@
 <li data-tab="{{data}}" class=" as__g_faqs_ls as__g_faqs_tcon_list_int {{cls}}">
   <h3>Sobre certificados y documentos</h3>
+ 
+
+  
   <ol class="fqs">
+
     <li class="fqs_list">
+      
       <div class="fqs_list_int">
         <h4>
           ¿Cómo obtengo el certificado de ingresos y retenciones para la
@@ -14,6 +19,12 @@
             del año. Si no lo recibiste, puedes solicitarlo de dos maneras:
           </p>
           <ul>
+            <li>Haz clic en el botón de Lusa nuestra asistente virtual en la página web para obtener
+              asistencia personalizada.
+              </li>
+              <li>Usa el botón de WhatsApp para hablar con nosotros o escríbenos directamente al
+                (+57) 315 511 4150.
+                </li>
             <li>
               A través de nuestra página web, en la sección
               <a
@@ -44,6 +55,8 @@
         <div class="fqs_info">
           <p>Existen dos formas para hacer la solicitud:</p>
           <ul>
+            <li>Haz clic en el botón de Lusa nuestra asistente virtual en la página web para obtener asistencia personalizada.</li>
+            <li>Usa el botón de WhatsApp para hablar con nosotros o escríbenos directamente al (+57) 315 511 4150.</li>
             <li>
               A través de nuestra página web, en la sección
               <a
@@ -64,6 +77,7 @@
               De igual forma, puedes ingresar a nuestro portal transaccional y
               acceder a los documentos y certificados que necesitas.
             </li>
+            
             <!-- <li>Certificado de estudio</li>
             <li>Certificado de cuenta bancaria</li>
             <li>Documento de identidad actualizado</li>
