--- a/src/partials/faqs/faq_4.html
+++ b/src/partials/faqs/faq_4.html
@@ -145,18 +145,15 @@
         <h4>¿Cuáles son las deducciones que hacen de mi mesada pensional? </h4>
         <div class="fqs_info">
           <p>
-            Puedes obtener toda la información en tu colilla de pago, la cual
-            puedes solicitar mensualmente de la siguiente manera:
+            Puedes obtener toda la información sobre las deducciones que se hacen a tu
+mesada pensional en tu colilla de pago, suscríbete al servicio automático del envío
+de colilla de esta manera:
+
           </p>
 
           <ul>
             <li>
-              Inscribiéndote al servicio de envío de colillas de pago, de esta
-              manera la recibirás mensualmente. Para hacerlo puedes ingresar a
-              nuestro servicio de suscripción haciendo clic aquí o llamando a
-              nuestra línea de atención a nivel nacional 018000 412 854 y en
-              Medellín al (604) 4026876, donde te brindaremos asesoría y
-              respuesta a tu solicitud.
+              En el siguiente link de nuestra página web: <a href="https://www.asulado.com/Suscribete" target="_blank"> www.asulado.com/Suscribete.</a>
             </li>
             <li>
               Radicando una PQRS a través de nuestra página web en la sección
