--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -126,12 +126,6 @@
           <div class="as_footer_ct_cont">
             <div class="as_footer_ct_cont_int">
               <div class="as_footer_ct_item">
-                <i role="presentation" class="fa-regular fa-envelope"></i>
-                <a class="ttle" href="mailto:info@asulado.com.co">
-                  info@asulado.com.co
-                </a>
-              </div>
-              <div class="as_footer_ct_item">
                 <i role="presentation" class="fa-regular fa-phone"></i>
                 <div>
                   <p class="ttle">
@@ -141,12 +135,39 @@
                     <b> Línea nacional:</b> 01 8000 412 854 |<b> Medellín:</b>
                     (604) 402 68 76
                   </p>
+                 
+                </div>
+              </div>
+              <div class="as_footer_ct_item">
+                <i role="presentation" class="fa-regular fa-phone"></i>
+                <div>
+                  <p class="ttle">
+                    Escríbenos por  
+                  </p>
                   <p>
+                    <b> WhatsApp al:</b> (+57) 315 511 4150  te responderemos durante nuestro horario de atención.
+                   
+                  </p>
+               
+                 
+                </div>
+              </div>
+              <div class="as_footer_ct_item">
+                <i role="presentation" class="fa-regular fa-envelope"></i>
+                <a class="ttle" href="mailto:info@asulado.com.co">
+                  info@asulado.com.co
+                </a>
+              </div>
+              <div class="as_footer_ct_item">
+                <i role="presentation" class="fa-regular fa-phone"></i>
+                <div>
+                  
                     <b>Lun-Vie:</b> 07:30 am - 08:00 pm | <b>Sab:</b> 08:00 am -
                     01:00 pm
                   </p>
                 </div>
               </div>
+              
 
               <!-- <div class="as_footer_ct_item">
                 <i role="presentation" class="fa-regular fa-clock"></i>
