--- a/src/partials/gobierno/5_altagerencia.html
+++ b/src/partials/gobierno/5_altagerencia.html
@@ -13,7 +13,7 @@
       <div class="modal_info">
         <div class="modal_info_pic">
           <img
-            src="/assets/images/altag/Patricia Restrepo .png"
+            src="/assets/images/altag/patricia.webp"
             alt="Patricia Restrepo"
             class="crp"
           />
@@ -48,7 +48,7 @@
       <div class="modal_info">
         <div class="modal_info_pic">
           <img
-            src="/assets/images/altag/Gustavo Farrera.png"
+            src="/assets/images/altag/gustavo.webp"
             alt="Gustavo Farrera"
             class="crp"
           />
@@ -56,7 +56,7 @@
 
         <div class="modal_info_int">
           <h4>Gustavo Farrera</h4>
-          <h6>Líder de Finanzas y Actuaría</h6>
+          <h6>Líder de Finanzas y Riesgos</h6>
           <blockquote>
             <p>
               “Gestionamos los negocios de ASULADO de manera eficiente y responsable cuidando los recursos a largo plazo que garantice los beneficios a nuestros clientes. Además, impulsamos la visión estratégica y el crecimiento sostenible, analizando posibles riesgos y oportunidades para garantizar la solvencia y viabilidad de la Compañía.”
@@ -83,7 +83,7 @@
       <div class="modal_info">
         <div class="modal_info_pic">
           <img
-            src="/assets/images/altag/Liliana Ríos .png"
+            src="/assets/images/altag/liliana.webp"
             alt="Liliana Ríos "
             class="crp"
           />
@@ -91,11 +91,10 @@
 
         <div class="modal_info_int">
           <h4>Liliana Ríos </h4>
-          <h6>Líder de Transformación</h6>
+          <h6>Líder de Desarrollo de Negocio</h6>
           <blockquote>
             <p>
-              “Llevamos a ASULADO al siguiente nivel, promoviendo la transformación y la operación digital, gestionando los proyectos a partir de la estrategia y potenciando la innovación, automatización y mejora de los procesos. <br>
-Somos los embajadores de la marca ASULADO y la llevamos hasta cada uno de nuestros públicos de interés, con el objetivo de dar a conocer su esencia y propósito dentro de la industria.”
+              En ASULADO, el cliente es nuestro protagonista. Por eso impulsamos el crecimiento de nuestra compañía creando experiencias, canales, productos, procesos y proyectos que eleven nuestra propuesta de valor. ¡Transformamos ideas en realidades! Somos embajadores apasionados de esta esencia y de la marca ASULADO, llevando nuestro propósito misional a todos nuestros públicos de interés.
             </p>
           </blockquote>
           <a
@@ -119,7 +118,7 @@ Somos los embajadores de la marca ASULADO y la llevamos hasta cada uno de nuestr
       <div class="modal_info">
         <div class="modal_info_pic">
           <img
-            src="/assets/images/altag/Mauricio Hernández.png"
+            src="/assets/images/altag/sergio.webp"
             alt="Mauricio Hernández"
             class="crp"
           />
@@ -154,7 +153,7 @@ Somos los embajadores de la marca ASULADO y la llevamos hasta cada uno de nuestr
       <div class="modal_info">
         <div class="modal_info_pic">
           <img
-            src="/assets/images/altag/Alejandra Osorio.png"
+            src="/assets/images/altag/alejandra.webp"
             alt="Alejandra Osorio"
             class="crp"
           />
@@ -189,7 +188,7 @@ Somos los embajadores de la marca ASULADO y la llevamos hasta cada uno de nuestr
       <div class="modal_info">
         <div class="modal_info_pic">
           <img
-            src="/assets/images/altag/Diana Ramírez.png"
+            src="/assets/images/altag/diana.webp"
             alt="Diana Ramírez"
             class="crp"
           />
@@ -259,7 +258,7 @@ Somos los embajadores de la marca ASULADO y la llevamos hasta cada uno de nuestr
       <div class="modal_info">
         <div class="modal_info_pic">
           <img
-            src="/assets/images/altag/Johana Lizarazo.png"
+            src="/assets/images/altag/jhoana.webp"
             alt="Johana Lizarazo"
             class="crp"
           />
@@ -294,7 +293,7 @@ Somos los embajadores de la marca ASULADO y la llevamos hasta cada uno de nuestr
       <div class="modal_info">
         <div class="modal_info_pic">
           <img
-            src="/assets/images/altag/Sebastián Mejía.png"
+            src="/assets/images/altag/sebastian.webp"
             alt="Sebastián Mejía"
             class="crp"
           />
@@ -326,7 +325,7 @@ Somos los embajadores de la marca ASULADO y la llevamos hasta cada uno de nuestr
   <ul class="g-alta">
     <li>
       <img
-        src="/assets/images/altag/Patricia Restrepo .png"
+        src="/assets/images/altag/patricia.webp"
         alt="Patricia Restrepo"
       />
       <button onclick="mod_1.showModal()">
@@ -338,7 +337,7 @@ Somos los embajadores de la marca ASULADO y la llevamos hasta cada uno de nuestr
     </li>
     <li>
       <img
-        src="/assets/images/altag/Gustavo Farrera.png"
+        src="/assets/images/altag/gustavo.webp"
         alt="Gustavo Farrera"
       />
       <button onclick="mod_2.showModal()">
@@ -346,20 +345,20 @@ Somos los embajadores de la marca ASULADO y la llevamos hasta cada uno de nuestr
         <i class="a fa-regular fa-arrow-right"></i>
       </button>
       <h4>Gustavo Farrera</h4>
-      <p>Líder de Finanzas y Actuaría</p>
+      <p>Líder de Finanzas y Riesgos</p>
     </li>
     <li>
-      <img src="/assets/images/altag/Liliana Ríos .png" alt="Liliana Ríos " />
+      <img src="/assets/images/altag/liliana.webp" alt="Liliana Ríos " />
       <button onclick="mod_3.showModal()">
         <i class="q fa-solid fa-quotes"></i>
         <i class="a fa-regular fa-arrow-right"></i>
       </button>
       <h4>Liliana Ríos </h4>
-      <p>Líder de Transformación</p>
+      <p>Líder de Desarrollo de Negocio</p>
     </li>
     <li>
       <img
-        src="/assets/images/altag/Mauricio Hernández.png"
+        src="/assets/images/altag/sergio.webp"
         alt="Mauricio Hernández"
       />
       <button onclick="mod_4.showModal()">
@@ -371,7 +370,20 @@ Somos los embajadores de la marca ASULADO y la llevamos hasta cada uno de nuestr
     </li>
     <li>
       <img
-        src="/assets/images/altag/Alejandra Osorio.png"
+        src="/assets/images/altag/jhoana.webp"
+        alt="Johana Lizarazo"
+      />
+      <button onclick="mod_8.showModal()">
+        <i class="q fa-solid fa-quotes"></i>
+        <i class="a fa-regular fa-arrow-right"></i>
+      </button>
+      <h4>Johana Lizarazo</h4>
+      <p>Líder de Tecnología</p>
+    </li>
+
+    <li>
+      <img
+        src="/assets/images/altag/alejandra.webp"
         alt="Alejandra Osorio"
       />
       <button onclick="mod_5.showModal()">
@@ -381,15 +393,7 @@ Somos los embajadores de la marca ASULADO y la llevamos hasta cada uno de nuestr
       <h4>Alejandra Osorio</h4>
       <p>Líder Talento Humano</p>
     </li>
-    <li>
-      <img src="/assets/images/altag/Diana Ramírez.png" alt="Diana Ramírez" />
-      <button onclick="mod_6.showModal()">
-        <i class="q fa-solid fa-quotes"></i>
-        <i class="a fa-regular fa-arrow-right"></i>
-      </button>
-      <h4>Diana Ramírez</h4>
-      <p>Líder de Auditoría</p>
-    </li>
+   
    <!-- <li>
       <img
         src="/assets/images/altag/Julián Jaramillo.png"
@@ -403,21 +407,10 @@ Somos los embajadores de la marca ASULADO y la llevamos hasta cada uno de nuestr
       <h4>Julián Jaramillo</h4>
       <p>Líder de Riesgos</p>
     </li>-->
+    
     <li>
       <img
-        src="/assets/images/altag/Johana Lizarazo.png"
-        alt="Johana Lizarazo"
-      />
-      <button onclick="mod_8.showModal()">
-        <i class="q fa-solid fa-quotes"></i>
-        <i class="a fa-regular fa-arrow-right"></i>
-      </button>
-      <h4>Johana Lizarazo</h4>
-      <p>Líder de Tecnología</p>
-    </li>
-    <li>
-      <img
-        src="/assets/images/altag/Sebastián Mejía.png"
+        src="/assets/images/altag/sebastian.webp"
         alt="Sebastián Mejía"
       />
       <button onclick="mod_9.showModal()">
@@ -426,6 +419,15 @@ Somos los embajadores de la marca ASULADO y la llevamos hasta cada uno de nuestr
       </button>
       <h4>Sebastián Mejía</h4>
       <p>Líder legal </p>
+    </li>
+    <li>
+      <img src="/assets/images/altag/diana.webp" alt="Diana Ramírez" />
+      <button onclick="mod_6.showModal()">
+        <i class="q fa-solid fa-quotes"></i>
+        <i class="a fa-regular fa-arrow-right"></i>
+      </button>
+      <h4>Diana Ramírez</h4>
+      <p>Líder de Auditoría</p>
     </li>
   </ul>
 </div>
