--- a/src/partials/faqs/faq_4.html
+++ b/src/partials/faqs/faq_4.html
@@ -153,7 +153,7 @@ de colilla de esta manera:
 
           <ul>
             <li>
-              En el siguiente link de nuestra página web: <a href="https://www.asulado.com/Suscribete" target="_blank"> www.asulado.com/Suscribete.</a>
+              En el siguiente link de nuestra página web: <a class="underline text-azul-bold font-bold underline-offset-2" href="https://www.asulado.com/Suscribete" target="_blank"> www.asulado.com/Suscribete.</a>
             </li>
             <li>
               Radicando una PQRS a través de nuestra página web en la sección
