--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -304,6 +304,11 @@
             Educacion financiera
           </a>
         </li>
+        <li>
+          <a href="/asulado_te_guia" class="dest" aria-current="page">
+            Asulado te guía
+          </a>
+        </li>
       </ul>
     </div>
     <div class="as__footer_brands">
