--- a/src/partials/gobierno/5_altagerencia.html
+++ b/src/partials/gobierno/5_altagerencia.html
@@ -125,7 +125,7 @@
         </div>
 
         <div class="modal_info_int">
-          <h4>Sergio Hernandez</h4>
+          <h4>Sergio Hernández</h4>
           <h6>Líder de Operaciones</h6>
           <blockquote>
             <p>
@@ -161,7 +161,7 @@
 
         <div class="modal_info_int">
           <h4>Alejandra Osorio</h4>
-          <h6>Líder Talento Humano</h6>
+          <h6>Líder de Talento Humano</h6>
           <blockquote>
             <p>
               “Nuestro propósito es fidelizar y desarrollar el talento humano extraordinario de ASULADO. Cuidando la experiencia y garantizando una oferta de valor al empleado potenciamos el compromiso y favorecemos una cultura sólida y coherente que apalanca el logro de los objetivos, tanto de la Organización, como de sus integrantes.  Aquí, más que hacer parte de una Compañía, es la oportunidad para ser impulsores del cambio, motivados por un propósito misional que impacta a toda una industria y un país.”
@@ -301,7 +301,7 @@
 
         <div class="modal_info_int">
           <h4>Sebastián Mejía</h4>
-          <h6>Líder legal </h6>
+          <h6>Líder de Legal</h6>
           <blockquote>
             <p>
               “Más allá de buscar la seguridad jurídica en ASULADO, brindamos confianza, protegemos los intereses de la Organización y sus públicos de interés, siempre asegurando el cumplimiento del marco legal y el código de buen Gobierno Corporativo.
@@ -365,7 +365,7 @@
         <i class="q fa-solid fa-quotes"></i>
         <i class="a fa-regular fa-arrow-right"></i>
       </button>
-      <h4>Sergio Hernandez</h4>
+      <h4>Sergio Hernández</h4>
       <p>Líder de Operaciones</p>
     </li>
     <li>
@@ -391,7 +391,7 @@
         <i class="a fa-regular fa-arrow-right"></i>
       </button>
       <h4>Alejandra Osorio</h4>
-      <p>Líder Talento Humano</p>
+      <p>Líder de Talento Humanoo</p>
     </li>
    
    <!-- <li>
@@ -418,7 +418,7 @@
         <i class="a fa-regular fa-arrow-right"></i>
       </button>
       <h4>Sebastián Mejía</h4>
-      <p>Líder legal </p>
+      <p> Líder de Legal</p>
     </li>
     <li>
       <img src="/assets/images/altag/diana.webp" alt="Diana Ramírez" />
