--- a/src/layouts/portal.html
+++ b/src/layouts/portal.html
@@ -73,6 +73,9 @@
     <!-- STYLES -->
     <link href="/assets/css/portal.css" rel="stylesheet" />
     <link href="/assets/css/forms.css" rel="stylesheet" />
+    <link href="/assets/css/forms.css" rel="stylesheet" />
+    <link href="/assets/css/glide.core.min.css" rel="stylesheet" />
+
     <!-- SCRIPS -->
     <script
       src="https://kit.fontawesome.com/c43a2a9e8d.js"
