--- a/src/partials/PORTAL/p_home_articulo.html
+++ b/src/partials/PORTAL/p_home_articulo.html
@@ -1,4 +1,4 @@
-<li class="service_link">
+<div class="service_link">
   <h3>{{title}}</h3>
   <img src="/assets/images/{{image}}" />
   <p>{{content}}</p>
@@ -6,4 +6,4 @@
     <span>VER MÁS</span>
     <i role="presentation" class="fa-light fa-arrow-right"></i>
   </a>
-</li>
+</div>
