Refactor CSS styles for search results table and hide empty bottom buttons

--- a/src/css/forms.css
+++ b/src/css/forms.css
@@ -286,6 +286,9 @@
 
   .pbBottomButtons {
     @apply mb-2;
+    &:has(td:not([id]):not([class])) {
+      @apply hidden;
+    }
     .pbTitle {
       @apply hidden;
     }
