--- a/src/css/forms.css
+++ b/src/css/forms.css
@@ -254,6 +254,15 @@
       &.pestado {
         @apply flex-row gap-3;
       }
+      &:has(strong),
+      &:has(a),
+      &:has(b),
+      &:has(i) {
+        @apply flex gap-3;
+        a {
+          @apply text-azul-dark font-bold;
+        }
+      }
     }
     div[id="pg:fm:pb:nocolillas"] {
       .first {
@@ -275,12 +284,12 @@
           }
         }
       }
-      .palert {
+      /* .palert {
         @apply flex gap-3;
         a {
           @apply text-azul-dark font-bold;
         }
-      }
+      } */
     }
   }
 
@@ -405,6 +414,9 @@
               &:has(span[style="display: none"]) {
                 @apply hidden;
               }
+              &:has(td.first.last) {
+                @apply !w-full;
+              }
               &:last-child {
                 .multiSelectPicklistTable {
                   @apply table;
@@ -448,6 +460,9 @@
               }
               td {
                 @apply w-full md:w-full px-2 text-left flex flex-col mb-4 md:mb-4;
+                &.empty {
+                  @apply hidden;
+                }
                 &:has(br) {
                   br {
                     @apply hidden;
